Fix rendering issues on safari for sidebar overlays.
Apple uses blur effects as a core part of their design language, so you'd think they'd implement them correctly in Safari, but apparently that's too big an ask

--- a/src/tamarack.css
+++ b/src/tamarack.css
@@ -1252,13 +1252,20 @@ html[tkapp] {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 0.25rem 0.5rem;
-    background: var(--tksidebar-fill);
-    border-right: 1px solid var(--tksidebar-border);
     flex-basis: 20%;
     width: 20%;
     min-width: 175px;
     max-width: 265px;
+}
+
+[tksidebar] [tksidebar-content] {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background: var(--tksidebar-fill);
+    border-right: 1px solid var(--tksidebar-border);
+    flex-grow: 1;
+    padding: 0.25rem 0.5rem;
     overflow-y: auto;
 }
 
@@ -1272,6 +1279,9 @@ html[tkapp] {
     left: 0;
     box-shadow: 0 0 15px 1px hsla(0, 0%, 0%, 0.25);
     transition: left 0.5s;
+}
+
+[tksidebar].tksidebar-overlay [tksidebar-content] {
     background: var(--tksidebar-overlay-fill);
     border-right: 1px solid var(--tksidebar-overlay-border);
     -webkit-backdrop-filter: blur(10px);
